tests/files/flow_controller_tests/should_run/045.cmdr
x = 3.14;
print toString(x);