tests/files/flow_controller_tests/should_fail/058.cmdr
x = true;
print cot(x);